--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=0.8">
 	<link rel="icon" type="image/ico" href="img/icon.png"/>
 	<!-- <link rel="stylesheet" href="css/font-awesome.min.css"> -->
+	<script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+	<script src="js/main.js"></script>
 	<link rel="stylesheet" href="css/style.css">
 </head>
 
