--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 	<script src="http://code.createjs.com/easeljs-0.7.0.min.js"></script>
 	<script src="js/main.js"></script>
-	<script src="main.js"></script>
+	<script src="js/animation.js"></script>
 	<script src = "easeljs-0.7.1.min.js"></script>
 	<link rel="stylesheet" href="css/style.css">
 </head>
