--- a/index.html
+++ b/index.html
@@ -63,22 +63,19 @@
 					</ul>
 
 					<ul class="sharp">
-						<li value="#">#</li>
+						<li value="s">#</li>
 						<li value="b">b</li>
 					</ul>
 					<ul class="opts">
-						<li value="minor">minor</li>
+						<li value="m">minor</li>
 						<li value="sus">sus</li>
 						<li value="dim">dim</li>
-						<li value="aug">aug</li>
 					</ul>
 					<ul class="upper">
-						<li value="4">4</li>
-						<li value="5">5</li>
+						<li value="6">6</li>
 						<li value="7">7</li>
 						<li value="9">9</li>
 						<li value="11">11</li>
-						<li value="13">13</li>
 					</ul>
 
 					<div id="submitCustom">Done</div>
