fixed the image loading code

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<link rel="stylesheet" href="css/style.css">
 </head>
 
-<body>
+<body onLoad = "initCreate()">
 
 	<nav class="main-nav">
 		<div class="wrap">
