fixed the reference to the easeljs library

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<script src="http://code.createjs.com/easeljs-0.7.0.min.js"></script>
 	<script src="js/main.js"></script>
 	<script src="js/animation.js"></script>
-	<script src = "easeljs-0.7.1.min.js"></script>
+	<script src = "js/easeljs-0.7.1.min.js"></script>
 	<link rel="stylesheet" href="css/style.css">
 </head>
 
