--- a/index.html
+++ b/index.html
@@ -41,12 +41,12 @@
 				<div class="quickadd">
 					<div class="title">Quick Chords</div>
 					<ul>
-						<li>G</li>
-						<li>Am</li>
-						<li>Bm</li>
-						<li>C</li>
-						<li>D</li>
-						<li>Em</li>
+						<li value="G">G</li>
+						<li value="Am">Am</li>
+						<li value="Bm">Bm</li>
+						<li value="C">C</li>
+						<li value="D">D</li>
+						<li value="Em">Em</li>
 					</ul>
 					<div id="toCustom">Custom Chord &raquo;</div>
 				</div>
