--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@
 					<img src="img/empty.png" />
 				</div>
 			</section>
+			<div id="saveAs">Save as Image</div>
 		</div>
 	</div><!-- end main-->
 
