--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 	<script src="js/main.js"></script>
 	<script src="js/animation.js"></script>
 	<script src = "js/easeljs-0.7.1.min.js"></script>
+	<script src = "js/canvas2image.js"></script>
+	<script src = "js/base62.js"></script>
 	<link rel="stylesheet" href="css/style.css">
 </head>
 
