--- a/cooley.html
+++ b/cooley.html
@@ -20,7 +20,9 @@
 
 	<nav class="main-nav">
 		<div class="wrap">
-			<div class="logo left">Songwritr</div>
+			<div class="logo left">
+				<a href="index.html">Songwritr</a>
+			</div>
 			<ul class="links right">
 				<li id="about">
 					<a href="/about" target="_blank">About</a>
