--- a/cooley.html
+++ b/cooley.html
@@ -114,6 +114,7 @@ eB B2 eBgB|eB B2 defg|afe^c dBAF|DEFD E2:|
 					<img src="img/empty.png" />
 				</div>
 			</section>
+			<div id="drawButton" class="button">Draw</div>
 			<div id="saveAs" class="button">Save as Image</div>
 		</div>
 	</div><!-- end main-->
