--- a/butterfly.html
+++ b/butterfly.html
@@ -98,6 +98,7 @@
 					<img src="img/empty.png" />
 				</div>
 			</section>
+			<div id="drawButton" class="button">Draw</div>
 			<div id="saveAs" class="button">Save as Image</div>
 		</div>
 	</div><!-- end main-->
