--- a/cooley.html
+++ b/cooley.html
@@ -68,16 +68,23 @@ eB B2 eBgB|eB B2 defg|afe^c dBAF|DEFD E2:|
 		<div class="sidebar">
 			<section class="chord-chooser">
 				<div class="quickadd">
-					<div class="title">Quick Chords</div>
+					<div class="title">Quick Notes</div>
 					<ul>
-						<li value="G">G</li>
-						<li value="Am">Am</li>
-						<li value="Bm">Bm</li>
-						<li value="C">C</li>
-						<li value="D">D</li>
-						<li value="Em">Em</li>
+						<li value="E">E</li>
+						<li value="Fs">F#</li>
+						<li value="Gs">G#</li>
+						<li value="A">A</li>
+						<li value="B">B</li>
+						<li value="Cs">C#</li>
+						<li value="Ds">D#</li>
+						<li value="">Rest</li>
 					</ul>
-					<div id="toCustom">Custom Chord &raquo;</div>
+					<ul class="opts">
+						<li value="m">minor</li>
+						<li value="sus">sus</li>
+						<li value="dim">dim</li>
+					</ul>
+					<div id="toCustom">Other Notes &raquo;</div>
 				</div>
 				<div class="custom">
 
@@ -95,23 +102,9 @@ eB B2 eBgB|eB B2 defg|afe^c dBAF|DEFD E2:|
 						<li value="s">#</li>
 						<li value="b">b</li>
 					</ul>
-					<ul class="opts">
-						<li value="m">minor</li>
-						<li value="sus">sus</li>
-						<li value="dim">dim</li>
-					</ul>
-					<ul class="upper">
-						<li value="6">6</li>
-						<li value="7">7</li>
-						<li value="9">9</li>
-						<li value="11">11</li>
-					</ul>
 
 					<div id="submitCustom" class="button">Done</div>
 					<div id="exitCustom">&laquo; Back</div>
-				</div>
-				<div id="currentChord" class="img-holder">
-					<img src="img/empty.png" />
 				</div>
 			</section>
 			<div id="drawButton" class="button">Draw</div>
