--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
 			</div>
 			<ul class="links right">
 				<li id="about">
-					<a href="/about" target="_blank">About</a>
+					<a href="/about.html" target="_blank">About</a>
 				</li>
 				<li id="login">
-					<a href="/login" target="_blank">Login</a>
+					<a href="#" target="_blank">Login</a>
 				</li>
 			</ul>
 		</div>
@@ -50,11 +50,13 @@
 			<form id="signIn">
 				<h1>Log In</h1>
 				<fieldset id="inputs">
-					<input id="username" type="text" placeholder="Username" autofocus required>   
+					<input id="username" type="text" placeholder="Username" required>   
 					<input id="password" type="password" placeholder="Password" required>
 				</fieldset>
 				<fieldset id="actions">
-					<input type="submit" id="submit" value="Log in" class="button">
+					<a id="submit" class="button" href="projects.html">
+						Log In
+					</a>
 					<a href="#">Forgot your password?</a><a href="#">Register</a>
 				</fieldset>
 			</form>
