Added my things

--- a/butterfly.html
+++ b/butterfly.html
@@ -12,10 +12,10 @@
 	<script src="js/easeljs-0.7.1.min.js"></script>
 	<script src="js/abcjs_editor_1.12-min.js"></script>
 	<script src="js/canvas2image.js"></script>
-	<script src="js/base62.js"></script>
+	<script src="js/base64.js"></script>
+	<script src="js/songwritrScripts.js"></script>
 	<link rel="stylesheet" href="css/style.css">
 </head>
-
 <body onLoad = "initCreate()">
 
 	<nav class="main-nav">
